# oxidemd

./: .gitignore  AGENTS.md  Cargo.toml  README.md  TODO.md  rustfmt.toml
docs/: math-rendering-evaluation.md  mermaid-rendering-evaluation.md  performance.md
samples/: README.md  basic.md  code-blocks.md  images.md  inline.md  japanese.md  long-form.md  math.md  mermaid-evaluation.md  mermaid.md
samples/assets/: SOURCES.md
src/: app.rs  bottom_bar.rs  cli.rs  code_block.rs  diagram.rs  document_loader.rs  document_session.rs  document_workspace.rs  embedded_svg.rs  export.rs  external_links.rs  i18n.rs  image_cache.rs  main.rs  math.rs  metrics.rs  parser.rs  reload_worker.rs  renderer.rs  search.rs  search_panel.rs  session.rs  shortcuts.rs  svg.rs  syntax.rs  theme.rs  top_bar.rs  watcher.rs
src/app/: reload.rs  ui.rs
src/renderer/: blocks.rs  embedded.rs  image.rs  inline.rs  mod.rs  sizing.rs
tools/: compare-mermaid-cli.ps1  run-performance-baseline.ps1
