[package]
name = "oxidemd"
version = "0.1.0"
edition = "2024"
description = "A fast, minimal Markdown viewer built with Rust"
license = "MIT"

[dependencies]
eframe = "0.33"
notify = "8"
pulldown-cmark = "0.13"
rfd = "0.15"
syntect = { version = "5", default-features = false, features = ["default-fancy"] }
