[package]
name = "oxidemd"
version = "0.1.0"
edition = "2024"
description = "A fast, minimal Markdown viewer built with Rust"
license = "MIT"

[dependencies]
eframe = { version = "0.33", features = ["persistence"] }
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
mathjax-svg-rs = "0.4"
notify = "8"
pulldown-cmark = "0.13"
resvg = "0.47"
rfd = "0.15"
syntect = { version = "5", default-features = false, features = ["default-fancy"] }
